<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layoutAnimation="@anim/layout_fade_in"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TextView
        android:id="@+id/text_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_title"
        android:layout_below="@+id/text_title"
        android:text="@string/placeholder_code"
        android:textColor="@color/belize_hole"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/text_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_code"
        android:layout_below="@+id/text_code"
        android:text="@string/placeholder_author"
        android:textColor="@color/wet_asphalt" />

    <TextView
        android:id="@+id/text_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_author"
        android:layout_below="@+id/text_author"
        android:text="@string/placeholder_publisher"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/turquoise" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/text_number"
        android:text="@string/placeholder_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/text_title"
        android:layout_marginRight="10dp"
        android:text="@string/placeholder_avaliable"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/alizarin"
        android:textSize="24sp" />

</RelativeLayout>