<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/image_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/edit_login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/login_hint"
        android:singleLine="true" >

        <requestFocus android:layout_width="wrap_content" />

    </EditText>

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_login_user"
        android:layout_alignRight="@+id/edit_login_user"
        android:layout_below="@+id/edit_login_user"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_login_submit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/image_login_footer_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/header_colors" />

</RelativeLayout>