<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/img_header_colors"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/header_colors" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <EditText
            android:id="@+id/edit_keyword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/button_search"
            android:background="@drawable/textfield_default"
            android:ems="10"
            android:hint="@string/search_hint"
            android:singleLine="true" >

        </EditText>

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/search" />

        <ImageView
            android:id="@+id/button_clear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/edit_keyword"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/clear_text"
            android:src="@drawable/common_input_box_clear" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/alizarin"
        android:fastScrollEnabled="true"
        tools:listitem="@layout/listitem_book_search" >

    </ListView>

</LinearLayout>